scroll jump fix after paste event

--- a/src/home/styles.scss
+++ b/src/home/styles.scss
@@ -33,6 +33,9 @@
 }
 
 /* Tell Quill not to scroll */
+.richtext-cnt{display:none;width: 100%; position: absolute; height: 100%; top:0; left:0; height:0; z-index:1000;background: #fff; }
+// .richtext-input{height: 100%;min-height: 100%;max-width: 720px;margin: auto;overflow: visible;}
+
 .ql-html-popupContainer{background:#f7f7f7!important;border-radius: 6px!important;}
 .ql-html-popupTitle{display:none!important;}
 .ql-html-buttonGroup{padding-top:116px; left:unset!important; right:50px; font-size:0.8rem;}
@@ -72,12 +75,17 @@
 .blog{
 	font-size: 12px;
 }
+
 .blog.ql-container {
 	font-family: unset;
 	font-size: 19px;
 	font-size: 1.9rem;
 	line-height: 1.6842;
 }
+
+// copy paste scroll issue fix
+//.ql-clipboard{position: fixed;}
+
 
 // toast
 .position-fixed.bottom-0.p-2.m-4.end-0.align-items-center{z-index:10000;}
